Update Movie Correlation Project.ipynb

--- a/Movie Correlation Project.ipynb
+++ b/Movie Correlation Project.ipynb
@@ -23,7 +23,7 @@
     "\n",
     "# Importing the data\n",
     "\n",
-    "df = pd.read_csv(r'C:\\Users\\Nirvan\\Documents\\Python Project\\movies.csv')"
+    "df = pd.read_csv('movies.csv')"
    ]
   },
   {
