Update Time Series Forecasting.ipynb

--- a/Time Series Forecasting.ipynb
+++ b/Time Series Forecasting.ipynb
@@ -17,7 +17,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "f_birth = pd.read_csv(r'C:\\Users\\Nirvan\\Desktop\\datasets\\daily-total-female-births-CA.csv', index_col = [0], parse_dates = [0])"
+    "f_birth = pd.read_csv('daily-total-female-births-CA.csv', index_col = [0], parse_dates = [0])"
    ]
   },
   {
